--- a/Burati.net/index.html
+++ b/Burati.net/index.html
@@ -11,7 +11,7 @@
         <p class="tmp1">useful link</p>
         <li><a href="https://google.com">Google</a></li>
     </ul>
-    <img class="img1" src="img1.jpg">
+    <img class="img1" src="Burati.net/img1.jpg">
     <a href="./myself.html">myself</a>
     </body>
 </html>
